test/integration/bad/lang/tparam_array_int.stan
transformed parameters {
  array[1,2,3] int x;
}
